metadata-retriever/metadata/objects/CMS_Contracts_Relation__c.object
<CustomObject>
    <fields>
        <fullName>CMS_Contract_No__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp;  CRM1_Contract__r.Id  &amp; &quot;?isdtp=vw&apos;}&quot;,   CRM1_Contract__r.Contract_Id__c   , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM1_Case_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Case No.</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CMS Contracts Relations</relationshipLabel>
        <relationshipName>CMS_Contracts_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM1_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>FOS Cases Relation</relationshipLabel>
        <relationshipName>CMS_Contracts_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOS_Case_Number__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp;     CRM1_Case_No__r.Id     &amp; &quot;?isdtp=vw&apos;}&quot;,    CRM1_Case_No__r.FOS_Case_Number__c    , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOS Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(CRM1_Case_No__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>CMS Contracts Relation</label>
    <nameField>
        <label>CMS Contracts Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMS Contracts Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>